--- a/blog_portafolio/blog/static/css/estilo2.css
+++ b/blog_portafolio/blog/static/css/estilo2.css
@@ -399,6 +399,49 @@ main .post-content .post-title a {
 /* Seccion Contenido */
 /* Fin contenido principal */
 
+/* Formularios
+.contenedor .form{
+    width: 450px;
+    margin: auto;
+    background: #c2e9fb;
+    padding: 10px 20px;
+    margin-top: 1em;
+    box-sizing: border-box;
+    border-radius: 7px;
+    margin-bottom: 1em;
+}
+*/
+/*
+input{
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 5px;
+    box-sizing: border-box;
+    border: none;
+}
+
+input-boton{
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 17px;
+    border: none;
+    background: #a1c4fd;
+}
+
+textarea{
+width: 407px;
+    margin-bottom: 20px;
+    padding: 5px;
+    box-sizing: border-box;
+    border: none;
+    min-height: 100px;
+    max-height: 200px;
+    max-width: 100%;
+    height: 223px;
+}
+
 /* Pie de pagina */
 footer.footer {
   height: 100%;
