--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -22,7 +22,7 @@
     <!-- Biblioteca AOS (Animation On Scroll) -->
 
 
-    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilo1.css' %}">
     <link rel="shortcut icon" href="{% static 'insumos/logo.ico' %}" type="image/x-icon">
 
     <link rel="stylesheet" href="{% static 'css/fuentes.css' %}">
