--- a/blog_portafolio/blog/templates/post.html
+++ b/blog_portafolio/blog/templates/post.html
@@ -16,19 +16,16 @@
                         <img class="img" src="{{ post.imagen_referencial.url }}" alt="post">
                     </div>
                     <div class="post-info flex-row">
-                        <span><i class="fas fa-user text-gray"></i>&nbsp;&nbsp;{{ post.autor.nombre }}</span>
+                        <span><i class="fas fa-user text-gray"></i>&nbsp;&nbsp;{{ post.autor.usuario }}</span>
                         <span><i
                                 class="fas fa-calendar-alt text-gray"></i>&nbsp;&nbsp;{{ post.fecha_publicacion }}</span>
-                        <span>{{ post.comentarios }}</span> <!-- Corregir aqui el numero de comentarios-->
+                        <span>{{ post.comentarios.count }}</span> <!-- Corregir aqui el numero de comentarios-->
                     </div>
                 </div>
 
                 <div class="post-title">
                     <a href="#">{{ post.titulo }}</a>
                     <p>{{ post.descripcion }}</p>
-                    <!--
-                    <p class="tags">Palabras clave: {{ post.tags.all|join:", " }}</p>
-                    -->
 
                     <hr>
 
@@ -38,54 +35,46 @@
                                 {{ post.contenido | safe }}
                             </p>
                         </article>
+                        <hr>
                         <div class="popular-tags">
-                            <h2>Etiquetas</h2>
+                            <p class="tags">Este post trata sobre:</p>
                             <div class="tags flex-row">
-                                <p class=""tags>
-                                {% for tag in post.tags.all %}
-                                <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>
+                                <p class="tags">
+                                    {% for tag in post.tags.all %}
 
-                                {% if not forloop.last %}, {% endif %}
-                                {% endfor %}
+                                    <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
+                                        <span class="tag">{{ tag.name }}</span></a>
+
+                                    {% if not forloop.last %}, {% endif %}
+                                    {% endfor %}
                                 </p>
-                                <!--
-                                <p class="tags">Este post trata sobre: {{ post.tags.all|join:", " }}</p>
 
-                                <span class="tag" data-aos="flip-up" data-aos-delay="100">Algoritmos</span>
-                                <span class="tag" data-aos="flip-up" data-aos-delay="200">Tecnología</span>
-                                <span class="tag" data-aos="flip-up" data-aos-delay="300">NLP</span>
-                                <span class="tag" data-aos="flip-up" data-aos-delay="400">Inteligencia</span>
-                                -->
                             </div>
+                            <p>Posts similares</p>
+                                {% for post in similar_posts %}
+                                <p>
+                                    <a href="{{ post.get_absolute_url }}"><span>{{ post.titulo }}</span></a>
+                                </p>
+                                {% empty %}
+                                No hay post similares aún
+                                {% endfor %}
                         </div>
                         <hr>
 
                         {% include "comentarios.html" %}
 
-                        <!-- Comentario prueba
-                        <div class="newsletter" data-aos="fade-up" data-aos-delay="200">
-                            <h2>Comentar</h2>
-                            <div class="form-element">
-                                <input type="text" class="input-element" placeholder="Email">
-                                <button class="btn form-btn">Enviar comentario</button>
-                            </div>
-                        </div>
-                        --->
-                        <hr>
-                        <p>
-                            <a href="{% url 'blog:post_share' post.id %}">
-                                <span>Compartir este post</span>
-                            </a>
-
-                        </p>
-                        <hr>
-
-
                     </div>
 
                 </div>
-
+                <hr>
+                <p>
+                    <a href="{% url 'blog:post_share' post.id %}">
+                        <span>Compartir este post</span>
+                    </a>
+                </p>
+                <hr>
             </div>
+
 
         </div>
 
