--- a/blog_portafolio/main/templates/main/index.html
+++ b/blog_portafolio/main/templates/main/index.html
@@ -124,6 +124,10 @@
                     <h4><label>Educación</label></h4>
                     <ul class="edu-list">
                         <li class="item">
+                            <span class="year">2015-2018</span>
+                            <p><span>Ph.D</span> en ciencias de la educación. (No conluido).</p>
+                        </li>
+                        <li class="item">
                             <span class="year">2010-2014</span>
                             <p><span>Magister</span> en enseñanza del castellano y la lingüística.</p>
                         </li>
@@ -157,13 +161,18 @@
                     <h4><label>Intereses</label></h4>
                     <ul class="edu-list">
                         <li class="item">
+                            <span class="year">Desarrollo WEB</span>
+                            <p>Aún hay muchas cosas que hacer en este campo, como ampliar su área de acción por medio de
+                                la <span>Inteligencia Artificial.</span></p>
+                        </li>
+                        <li class="item">
                             <span class="year">Inteligencia Artificial</span>
                             <p>Aprender cada día más sobre el campo de la <span>IA</span> que moldeará el futuro
                                 inmediato.</p>
                         </li>
                         <li class="item">
                             <span class="year">Análisis de datos</span>
-                            <p>Los datos son <span>la energía de nuestro presente</span> y debemos prepararnos para
+                            <p>Los datos son <span>la energía de nuestro presente</span> y debemos estar preparados para
                                 usarlos.</p>
                         </li>
                         <li class="item">
@@ -516,6 +525,7 @@
             glare: true,
             "max-glare": 1,
         });
+
 
 
 
