Corregidos formularios de comentarios y reenvío.

--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -92,7 +92,7 @@
         <div class="sobre-nos" data-aos="fade-right" data-aos-delay="200">
             <h2>Sobre nosotros</h2>
             <a href="{% url 'main:home' %}">
-                <button class="btn post-btn">¿Quién soy...?&nbsp;<i class="fas fa-arrow-right"></i></button>
+                <button class="btn post-btn">¿Quiénes somos...?&nbsp;<i class="fas fa-arrow-right"></i></button>
             </a>
         </div>
         <div class="newsletter" data-aos="fade-right" data-aos-delay="200">
