--- a/blog_portafolio/blog/templates/share.html
+++ b/blog_portafolio/blog/templates/share.html
@@ -11,8 +11,12 @@
     </p>
     {% else %}
 
+    <div class="contenedor">
+
+
+    </div>
     <form class="forms" method="post" style="
-    width: 450px;
+    width: 25rem;
     margin: auto;
     background: #c2e9fb;
     padding: 10px 20px;
