--- a/blog_portafolio/main/templates/main/contacto.html
+++ b/blog_portafolio/main/templates/main/contacto.html
@@ -1,7 +1,6 @@
 {% extends 'main/base.html' %}
-{% load static %}
 
-{% block title %}Rubén - Contacto{% endblock %}
+{% block title %}Contacto{% endblock %}
 
 {% block content %}
 
