--- a/blog_portafolio/blog/templates/comentarios.html
+++ b/blog_portafolio/blog/templates/comentarios.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="contenedor">
 
     {% with comentarios.count as total_comentarios %}
@@ -20,11 +22,15 @@
     {% endfor %}
 
     {% if nuevo_comentario %}
-    <h2>Tu comentario ha sido añadido.</h2>
+    <p>Tu comentario ha sido añadido.</p>
     {% else %}
 
+</div>
+
+<div class="contenedor" data-aos="fade-up" data-aos-delay="200">
+
     <form method="post" class="form" style="
-    width: 450px;
+    width: 100%;
     margin: auto;
     background: #c2e9fb;
     padding: 10px 20px;
@@ -44,6 +50,8 @@
     background: #a1c4fd;
 "></p>
     </form>
+
+
     {% endif %}
 
 </div>
