--- a/blog_portafolio/blog/templates/share.html
+++ b/blog_portafolio/blog/templates/share.html
@@ -37,6 +37,17 @@
 "></p>
     </form>
     {% endif %}
-</div>
 
+</div>
 {% endblock %}
+
+<!-- Esto es para editar y agregar al template compartir el aside
+<section class="contenedor">
+    <div class="site-content">
+
+        {% include "aside.html" %}
+
+    </div>
+</section>
+
+-->
