--- a/blog_portafolio/main/templates/main/base.html
+++ b/blog_portafolio/main/templates/main/base.html
@@ -24,6 +24,8 @@
 
 {% block content %}{% endblock %}
 
+{% block contacto %}{% endblock %}
+
 {% include 'main/partial/footer.html' %}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.js"></script>
