--- a/blog_portafolio/main/templates/main/contacto.html
+++ b/blog_portafolio/main/templates/main/contacto.html
@@ -1,8 +1,8 @@
 {% extends 'main/base.html' %}
 
 {% block title %}Contacto{% endblock %}
-
-{% block content %}
+{% load static %}
+{% block contacto %}
 
 
 <!-- Sección de contacto -->
