Corrección de la sección del carrusel

--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -14,6 +14,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="{% static 'css/all.css' %}">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"/>
+
     <!-- Owl-Carousel -->
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
