--- a/blog_portafolio/blog/templates/post.html
+++ b/blog_portafolio/blog/templates/post.html
@@ -43,7 +43,8 @@
                                 <span style="background: var(--sky);
                                             padding: 0.4rem 1rem;
                                             border-radius: 3rem;
-                                            margin: 0.1rem 0.2rem;">{{ tag.name | capfirst }}</span>
+                                            margin: 0.1rem 0.2rem;
+                                            ">{{ tag.name | capfirst }}</span>
 
 
                                 <!--<a href="{% url 'blog:post_list_by_tag' tag.slug %}">
