--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
     <link rel="shortcut icon" href="{% static 'insumos/logo.ico' %}" type="image/x-icon">
 
-    <!--<link rel="stylesheet" href="{% static 'css/fuentes.css' %}"> -->
+    <link rel="stylesheet" href="//cdn.mathjax.org/mathjax/2.2-latest/MathJax.js?config=TeX-AMS_HTML">
+
 
     <link rel="stylesheet"
           href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
