Preparando para producción

--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -36,6 +36,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 
 </head>
 
@@ -107,6 +110,7 @@
 
 <!-- Biblioteca AOS (Animation On Scroll Librery) -->
 <script src="{% static 'js/principal.js' %}"></script>
+
 
 </body>
 
