--- a/blog_portafolio/blog/templates/blog/comentarios.html
+++ b/blog_portafolio/blog/templates/blog/comentarios.html
@@ -29,7 +29,7 @@
 
 <div class="contenedor" data-aos="fade-up" data-aos-delay="200">
 
-    <form method="POST" class="form" style="
+    <form method="POST" action="***********" class="form" style="
     width: 100%;
     margin: auto;
     background: #c2e9fb;
