--- a/blog_portafolio/blog/templates/blog/mas_comentados.html
+++ b/blog_portafolio/blog/templates/blog/mas_comentados.html
@@ -9,14 +9,10 @@
 
 
                 {% for post in mas_comentados %}
-                <!--
-                            <a href="{{ post.get_absolute_url }}">{{ post.titulo }}</a>
-                -->
+
                 <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
                     <img src="{{ post.imagen_referencial.url }}" alt="Post-1">
                     <div class="blog-title">
-                        <!--
-                        <h3>{{ post.titulo }}</h3> -->
                         <h2><a href="{{ post.get_absolute_url }}">{{ post.titulo }}</a></h2>
                         <button class="btn btn-blog">{{ post.categoria }}</button>
                         <!--<span>5 minutos.</span>-->
@@ -36,4 +32,4 @@
         </div>
     </div>
 </section>
-<!-- Blog carusel -->
+<!-- Blog carrusel -->
