--- a/blog_portafolio/blog/templates/blog/post.html
+++ b/blog_portafolio/blog/templates/blog/post.html
@@ -65,7 +65,7 @@
                     </div>
                     <hr>
 
-                     <!--{% include "blog/comentarios.html" %}-->
+                     {% include "blog/comentarios.html" %}
 
                     <hr>
                     <p>
