--- a/blog_portafolio/main/templates/main/contacto.html
+++ b/blog_portafolio/main/templates/main/contacto.html
@@ -31,7 +31,7 @@
 
                 <div class="contact-right">
                     <p>Siempre dispuesto a discutir el diseño <br><span>de productos de calidad</span></p>
-                    <form action="/blog/contacto/" class="contact-form" method="POST">
+                    <form action="./" class="contact-form" method="POST">
                         {% csrf_token %}
                         <div class="first-row">
                             {{form.nombre}}
