--- a/blog_portafolio/main/templates/main/index.html
+++ b/blog_portafolio/main/templates/main/index.html
@@ -225,7 +225,7 @@
                     <div class="service-card">
                         <i class="fas fa-pencil-ruler"></i>
                         <h3>Diseños UI/UX</h3>
-                        <div class="learn-more-btn">Aprender más <i class="fas fa-long-arrow-alt-right"></i></div>
+                        <div class="learn-more-btn">¿Qué es? <i class="fas fa-long-arrow-alt-right"></i></div>
                     </div>
                     <div class="service-modal flex-center">
                         <div class="service-modal-body">
@@ -254,7 +254,7 @@
                     <div class="service-card">
                         <i class="fas fa-photo-video"></i>
                         <h3>Branding & desing</h3>
-                        <div class="learn-more-btn">Aprender más <i class="fas fa-long-arrow-alt-right"></i></div>
+                        <div class="learn-more-btn">¿Qué es? <i class="fas fa-long-arrow-alt-right"></i></div>
                     </div>
                     <div class="service-modal flex-center">
                         <div class="service-modal-body">
@@ -281,7 +281,7 @@
                     <div class="service-card">
                         <i class="fas fa-file-code"></i>
                         <h3>Desarrollo WEB</h3>
-                        <div class="learn-more-btn">Aprender más <i class="fas fa-long-arrow-alt-right"></i></div>
+                        <div class="learn-more-btn">¿Qué es? <i class="fas fa-long-arrow-alt-right"></i></div>
                     </div>
                     <div class="service-modal flex-center">
                         <div class="service-modal-body">
@@ -306,7 +306,7 @@
                     <div class="service-card">
                         <i class="fas fa-align-left"></i>
                         <h3>Escritor de contenido</h3>
-                        <div class="learn-more-btn">Aprender más <i class="fas fa-long-arrow-alt-right"></i></div>
+                        <div class="learn-more-btn">¿Qué es? <i class="fas fa-long-arrow-alt-right"></i></div>
                     </div>
                     <div class="service-modal flex-center">
                         <div class="service-modal-body">
