--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -13,24 +13,23 @@
 
     <!-- Font Awesome -->
 
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"/>
 
     <!-- Owl-Carousel -->
 
-    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+   <!-- <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}"> -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
     <!-- Biblioteca AOS (Animation On Scroll) -->
-    <link rel="stylesheet" href="{% static 'css/aos.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/aos.css' %}"> -->
     <!-- Biblioteca AOS (Animation On Scroll) -->
-
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&family=Josefin+Sans:ital,wght@0,400;0,500;1,300;1,400&family=Lexend:wght@200;300;400;500;600&family=Livvic:ital,wght@0,200;0,400;0,500;1,300;1,400&display=swap">
 
     <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
     <link rel="shortcut icon" href="{% static 'insumos/logo.ico' %}" type="image/x-icon">
@@ -119,6 +118,11 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
 </body>
 
