--- a/blog_portafolio/blog/templates/blog/aside.html
+++ b/blog_portafolio/blog/templates/blog/aside.html
@@ -22,11 +22,11 @@
     </div>
 
 
-    <!-- Esta es la parte para colocar los posts mas recientes -->
-<!--
+    <!-- Esta es la parte para colocar los posts mas recientes
+
     <h2>Mi blog</h2>
     <p>Este es mi blog. He escrito {% total_posts %} posts hasta ahora</p>
-    -->
+-->
 
     <div class="popular-post">
         <h2 data-aos="fade-left" data-aos-delay="100">Más recientes</h2>
@@ -38,11 +38,11 @@
     <div class="popular-tags">
         <h2 data-aos="fade-left" data-aos-delay="100">Tags Populares</h2>
         <div class="tags flex-row">
-            <span class="tag" data-aos="flip-up" data-aos-delay="100">Algoritmos</span>
-            <span class="tag" data-aos="flip-up" data-aos-delay="200">Tecnología</span>
+            <span class="tag" data-aos="flip-up" data-aos-delay="100">Deeplearning</span>
+            <span class="tag" data-aos="flip-up" data-aos-delay="200">IA Generativa</span>
             <span class="tag" data-aos="flip-up" data-aos-delay="300">NLP</span>
-            <span class="tag" data-aos="flip-up" data-aos-delay="400">Inteligencia</span>
-            <span class="tag" data-aos="flip-up" data-aos-delay="500">Linguistica</span>
+            <span class="tag" data-aos="flip-up" data-aos-delay="400">IA</span>
+            <span class="tag" data-aos="flip-up" data-aos-delay="500">Matemáticas</span>
             <span class="tag" data-aos="flip-up" data-aos-delay="600">Machine Learning</span>
             <span class="tag" data-aos="flip-up" data-aos-delay="700">Forecasting</span>
 
