--- a/blog_portafolio/blog/templates/blog/inicio.html
+++ b/blog_portafolio/blog/templates/blog/inicio.html
@@ -6,7 +6,7 @@
 
 {% block contenido %}
 <!-- Titulo -->
-<!-- Sección de nota principal -->
+<!-- Sección de nota principal >
 <section class="site-title">
     <div class="site-background" data-aos="fade-up" data-aos-delay="100">
         <img src="{{ principal.categoria.imagen_referencial.url }}" alt="imagen-categoria">
@@ -20,7 +20,54 @@
         </div>
     </div>
 </section>
-<!-- Titulo -->
+ Titulo -->
+
+<section class="showcase" data-aos="fade-up" data-aos-delay="100" style="position: relative;
+  right: 0;
+  width: 100%;
+  min-height: 100vh;
+  padding: 2.5em;
+  display: flex;
+  margin: auto;
+  align-items: center; /*Centra el texto en la pagina*/
+  background: #111;
+  color: #fff;
+  z-index: 2;">
+
+<img src="{{ principal.categoria.imagen_referencial.url }}" alt="imagen-categoria" style="  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.9;">
+            <div class="contenedor"></div>
+            <div class="texto" style="  position: relative;
+  padding-right: 3rem;
+  z-index: 10;">
+                <h3 style="  font-size: 1.5em;
+  font-weight: 400;
+  line-height: 1em;
+  padding-right: 1em;
+  text-shadow: 0.1rem 0.1rem #333;">{{ principal.categoria | upper }}</h3>
+                <h1 style="  font-size: 3em;
+  font-weight: 700;
+  line-height: 1em;
+  text-shadow: 0.1rem 0.1rem #111">{{ principal.titulo }}</h1>
+                <p style="  font-size: 1em;
+  margin: 20px 0;
+  font-weight: 400;
+  max-width: 700px;
+  color: white;">{{ principal.descripcion | truncatewords_html:30 }}</p>
+                <button class="btn" style="margin: 0.2rem;
+  background: var(--sky);"><a style="  display: inline-block;
+  font-size: 1em;
+  color: #111;
+  text-transform: uppercase;
+  letter-spacing: 1px;" href="{{ principal.get_absolute_url }}">Leer mas...</a></button>
+            </div>
+
+</section>
 
 
 <!-- Sección carrusel -->
