--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -114,8 +114,10 @@
 <!-- Biblioteca AOS (Animation On Scroll Librery) -->
 <script src="{% static 'js/principal.js' %}"></script>
 
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<!-- REVISAR EL EDITOR DE TEXTO MATEMÁTICO.
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
+<!--
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML"></script>
 
