--- a/blog_portafolio/blog/templates/blog/post.html
+++ b/blog_portafolio/blog/templates/blog/post.html
@@ -27,9 +27,9 @@
                 <div class="post-title">
 
                     <h1>{{ post.titulo }}</h1>
-                    <p>{{ post.descripcion }}</p>
+                    <p style="line-height: 200%;">{{ post.descripcion }}</p>
                     <hr>
-                    <article>
+                    <article style="line-height: 1.5;">
                         <p>
                             {{ post.contenido | safe}}
                         </p>
