Ultimas modificaciones antes de subirlo a la web.

--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -51,7 +51,7 @@
 <nav class="nav">
     <div class="nav-menu flex-row">
         <div class="nav-brand">
-            <a href="{% url 'blog:index' %}" class="text-gray"><i class="fab fa-battle-net"></i><em> - IA
+            <a href="{% url 'blog:index' %}" class="text-gray"><i class="fa-brands fa-battle-net"></i><em> - IA
                 Español</em></a>
         </div>
         <div class="toggle-collapse">
