--- a/blog_portafolio/blog/templates/buscar.html
+++ b/blog_portafolio/blog/templates/buscar.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Resultados de Busqueda: {{ texto_buscado }}</title>
+    <title>Resultados de Búsqueda: {{ texto_buscado }}</title>
 </head>
 <body>
-<h1>Resultados de la busqueda para <em>{{ texto_buscado }}</em></h1>
-## Debo hacer este template para realizar la busqueda### PENDIENTE
+<h1>Resultados de la búsqueda para <em>{{ texto_buscado }}</em></h1>
+<!-- Debo hacer esta plantilla para realizar la búsqueda### PENDIENTE -->
 </body>
 </html>
