--- a/blog_portafolio/blog/static/css/estilo.css
+++ b/blog_portafolio/blog/static/css/estilo.css
@@ -70,7 +70,6 @@ span {
 .contenedor {
   margin: .3rem;
   padding: 0;
-  align-items: center; /* 1vw; /* lo cambié de 0 y 5vw...tenía font-size de 15px*/
 }
 
 .text-gray {
@@ -209,7 +208,7 @@ section {
 }
 
 .texto h1{
-  font-size: 3em;
+  font-size: 2.6rem;
   font-weight: 700;
   line-height: 1em;
   text-shadow: 0.1rem 0.1rem #111
@@ -591,7 +590,7 @@ footer.footer .subir span:hover {
 
 @media only screen and (max-width: 520px) {
 
-  main .site-title .site-background img{
+  main .showcase img{
     width: 200% !important;
   }
 
