--- a/blog_portafolio/blog/templates/blog/aside.html
+++ b/blog_portafolio/blog/templates/blog/aside.html
@@ -6,27 +6,27 @@
         <h2 data-aos="fade-left" data-aos-delay="100">Temas</h2>
         <ul class="category-list">
             <li class="list-items" data-aos="fade-left" data-aos-delay="100">
-                <a href="#">General</a>
-                <span>(05)</span>
+                <a href="{% url 'blog:general' %}">General</a>
+                <!--<span>(05)</span>-->
             </li>
             <li class="list-items" data-aos="fade-left" data-aos-delay="200">
-                <a href="#">Deep Learning</a>
-                <span>(05)</span>
+                <a href="{% url 'blog:deeplearning' %}">Deep Learning</a>
+                <!--<span>(05)</span>-->
             </li>
             <li class="list-items" data-aos="fade-left" data-aos-delay="300">
-                <a href="#">Machine Learning</a>
-                <span>(05)</span>
+                <a href="{% url 'blog:machinelearning' %}">Machine Learning</a>
+                <!--<span>(05)</span>-->
             </li>
 
         </ul>
     </div>
 
 
-    <!-- Esta es la parte para colocar los posts mas recientes
+<!-- Esta es la parte para colocar los posts mas recientes
 
     <h2>Mi blog</h2>
-    <p>Este es mi blog. He escrito {% total_posts %} posts hasta ahora</p>
--->
+    <p>Este es mi blog. He escrito {% total_posts %} posts hasta ahora</p> -->
+
 
     <div class="popular-post">
         <h2 data-aos="fade-left" data-aos-delay="100">Más recientes</h2>
