--- a/blog_portafolio/blog/templates/blog/footer.html
+++ b/blog_portafolio/blog/templates/blog/footer.html
@@ -11,7 +11,7 @@
         </div>
         <div class="newsletter" data-aos="fade-right" data-aos-delay="200">
             <h2>Newsletter</h2>
-            <p>Si estás interesado puedes escribirnos:</p>
+            <p style="color: white;">Si estás interesado puedes escribirnos:</p>
             <a href="{% url 'blog:contacto' %}">
                 <button class="btn post-btn">Escribir&nbsp;<i class="fas fa-arrow-right"></i></button>
             </a>
@@ -19,17 +19,20 @@
         </div>
         <div class="instagram" data-aos="fade-left" data-aos-delay="200">
             <h2>Algunos Posts</h2>
-
-            {% for post in posts %}
             <div class="flex-row">
-                <img class="img" src="{{ post.imagen_referencial.url }}" alt="imagen">
+                <img src="{% static 'insumos/Blog-post/post-robot1.jpg' %}" alt="insta1">
+                <img src="{% static 'insumos/Blog-post/post-robot2.jpg' %}" alt="insta2">
+                <img src="{% static 'insumos/Blog-post/post-robot3.jpg' %}" alt="insta3">
             </div>
-            {% endfor %}
-
+            <div class="flex-row">
+                <img src="{% static 'insumos/Blog-post/post-robot4.jpg' %}" alt="insta4">
+                <img src="{% static 'insumos/Blog-post/post-robot5.jpg' %}" alt="insta5">
+                <img src="{% static 'insumos/Blog-post/post-robot6.jpg' %}" alt="insta6">
+            </div>
         </div>
         <div class="follow" data-aos="fade-left" data-aos-delay="200">
             <h2>Seguir</h2>
-            <p>Redes sociales</p>
+            <p style="color: white;">Redes sociales</p>
             <div>
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
