--- a/blog_portafolio/blog/templates/blog/inicio.html
+++ b/blog_portafolio/blog/templates/blog/inicio.html
@@ -5,22 +5,7 @@
 
 
 {% block contenido %}
-<!-- Titulo -->
-<!-- Sección de nota principal >
-<section class="site-title">
-    <div class="site-background" data-aos="fade-up" data-aos-delay="100">
-        <img src="{{ principal.categoria.imagen_referencial.url }}" alt="imagen-categoria">
 
-        <div class="contenedor">
-
-            <h3>{{ principal.categoria | upper }}</h3>
-            <a href="{{ principal.get_absolute_url }}"><h1>{{ principal.titulo }}</h1></a>
-            <button class="btn"><a href="{{ principal.get_absolute_url }}">Aprendamos Juntos...</a></button>
-
-        </div>
-    </div>
-</section>
- Titulo -->
 
 <section class="showcase" data-aos="fade-up" data-aos-delay="100" style="position: relative;
   right: 0;
@@ -34,13 +19,20 @@
   color: #fff;
   z-index: 2;">
 
-<img src="{{ principal.categoria.imagen_referencial.url }}" alt="imagen-categoria" style="  position: absolute;
+<img src="{{ principal.categoria.imagen_referencial.url }}" alt="imagen-categoria"
+     style="position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.9;">
+  opacity: 0.9;
+@media only screen and (max-width: 520px) {
+
+  {
+    width: 200% !important;
+  }
+">
             <div class="contenedor"></div>
             <div class="texto" style="  position: relative;
   padding-right: 3rem;
@@ -50,7 +42,7 @@
   line-height: 1em;
   padding-right: 1em;
   text-shadow: 0.1rem 0.1rem #333;">{{ principal.categoria | upper }}</h3>
-                <h1 style="  font-size: 3em;
+                <h1 style="  font-size: 2.6rem;
   font-weight: 700;
   line-height: 1em;
   text-shadow: 0.1rem 0.1rem #111">{{ principal.titulo }}</h1>
