--- a/blog_portafolio/blog/templates/base.html
+++ b/blog_portafolio/blog/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block titulo %} IA en Español {% endblock titulo %}</title>
+    <title>{% block titulo %} AI en Español {% endblock titulo %}</title>
 
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
 
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+    <!-- Biblioteca AOS (Animación en Scroll) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
-    <!-- Biblioteca AOS (Animation On Scroll) -->
+
     <!-- <link rel="stylesheet" href="{% static 'css/aos.css' %}"> -->
     <!-- Biblioteca AOS (Animation On Scroll) -->
     <link rel="stylesheet"
@@ -51,8 +51,8 @@
 <nav class="nav">
     <div class="nav-menu flex-row">
         <div class="nav-brand">
-            <a href="{% url 'blog:index' %}" class="text-gray"><i class="fa-brands fa-battle-net"></i><em> - IA
-                Español</em></a>
+            <a href="{% url 'blog:index' %}" class="text-gray"><i class="fa-brands fa-battle-net"></i><em> AI en Español</em></a>
+
         </div>
         <div class="toggle-collapse">
             <div class="toggle-icons">
