--- a/blog_portafolio/main/templates/main/index.html
+++ b/blog_portafolio/main/templates/main/index.html
@@ -260,8 +260,8 @@
                     <div class="service-modal flex-center">
                         <div class="service-modal-body">
                             <i class="fas fa-times modal-close-btn"></i>
-                            <h3>Branding & desing</h3>
-                            <h4>¿Qué es Brand & desing?</h4>
+                            <h3>Marcas & diseños</h3>
+                            <h4>¿Qué es?</h4>
                             <p>Puede ser definida como una de las prácticas más importantes en el mundo del mercadeo
                                 por medio de la creación del nombre, logo, diseño y elementos simbólicos relacionados
                                 con la identidad distintiva de una empresa y sus productos.</p>
