--- a/blog_portafolio/blog/static/css/estilo.css
+++ b/blog_portafolio/blog/static/css/estilo.css
@@ -230,12 +230,12 @@ section {
   letter-spacing: 1px;
 }
 
-texto .btn {
+.texto .btn {
   margin: 0.2rem;
   background: var(--sky);
 }
 
-texto .btn:hover {
+.texto .btn:hover {
   background: transparent;
   border: 1px solid var(--white);
   color: var(--white);
