--- a/blog_portafolio/staticfiles/css/estilo.css
+++ b/blog_portafolio/staticfiles/css/estilo.css
@@ -70,7 +70,6 @@ span {
 .contenedor {
   margin: .3rem;
   padding: 0;
-  align-items: center; /* 1vw; /* lo cambié de 0 y 5vw...tenía font-size de 15px*/
 }
 
 .text-gray {
@@ -209,7 +208,7 @@ section {
 }
 
 .texto h1{
-  font-size: 3em;
+  font-size: 2.6rem;
   font-weight: 700;
   line-height: 1em;
   text-shadow: 0.1rem 0.1rem #111
@@ -231,12 +230,12 @@ section {
   letter-spacing: 1px;
 }
 
-texto .btn {
+.texto .btn {
   margin: 0.2rem;
   background: var(--sky);
 }
 
-texto .btn:hover {
+.texto .btn:hover {
   background: transparent;
   border: 1px solid var(--white);
   color: var(--white);
@@ -328,7 +327,7 @@ main .post-content {
 
 main .site-content .post-content > .post-image,
 .post-title {
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   position: relative;
 }
 
@@ -591,7 +590,7 @@ footer.footer .subir span:hover {
 
 @media only screen and (max-width: 520px) {
 
-  main .site-title .site-background img{
+  main .showcase img{
     width: 200% !important;
   }
 
